CHATS_SIT/force-app/main/default/objects/Transaction_c__x.object
<CustomObject>
    <externalDataSource>OEC_Provider_Datasource</externalDataSource>
    <externalName>Transaction__c</externalName>
    <fields>
        <fullName>API_Approved_By_c__c</fullName>
        <externalDeveloperName>API_Approved_By__c</externalDeveloperName>
        <label>API Approved By</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_Email_Alert_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>API_Email_Alert__c</externalDeveloperName>
        <label>API Email Alert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>API_Flag_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>API_Flag__c</externalDeveloperName>
        <label>API Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>API_User_c__c</fullName>
        <externalDeveloperName>API_User__c</externalDeveloperName>
        <label>API User</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CHATS_Case_c__c</fullName>
        <externalDeveloperName>CHATS_Case__c</externalDeveloperName>
        <label>CHATS Case</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CI_Attendance_Date_c__c</fullName>
        <externalDeveloperName>CI_Attendance_Date__c</externalDeveloperName>
        <label>Attendance Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CI_Attendance_Hours_c__c</fullName>
        <externalDeveloperName>CI_Attendance_Hours__c</externalDeveloperName>
        <label>Attendance Hours</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CI_Authorization_Identifier_c__c</fullName>
        <externalDeveloperName>CI_Authorization_Identifier__c</externalDeveloperName>
        <label>Authorization Identifier</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CI_Begin_Date_c__c</fullName>
        <externalDeveloperName>CI_Begin_Date__c</externalDeveloperName>
        <label>Begin Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CI_Card_Number_c__c</fullName>
        <externalDeveloperName>CI_Card_Number__c</externalDeveloperName>
        <label>Card Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CI_Client_Id_c__c</fullName>
        <externalDeveloperName>CI_Client_Id__c</externalDeveloperName>
        <label>Client ID</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CI_Denial_Reason_c__c</fullName>
        <externalDeveloperName>CI_Denial_Reason__c</externalDeveloperName>
        <label>Denial Reason</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CI_End_Date_c__c</fullName>
        <externalDeveloperName>CI_End_Date__c</externalDeveloperName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CI_Entry_Date_c__c</fullName>
        <externalDeveloperName>CI_Entry_Date__c</externalDeveloperName>
        <label>Entry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CI_Entry_Time_c__c</fullName>
        <externalDeveloperName>CI_Entry_Time__c</externalDeveloperName>
        <label>Entry Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CI_Error_Description_c__c</fullName>
        <externalDeveloperName>CI_Error_Description__c</externalDeveloperName>
        <label>Error Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CI_Provider_ID_c__c</fullName>
        <externalDeveloperName>CI_Provider_ID__c</externalDeveloperName>
        <label>Provider ID</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CI_SAF_Indicator_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>CI_SAF_Indicator__c</externalDeveloperName>
        <label>SAF Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CI_State_ID_c__c</fullName>
        <externalDeveloperName>CI_State_ID__c</externalDeveloperName>
        <label>State ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CI_Swipe_c__c</fullName>
        <externalDeveloperName>CI_Swipe__c</externalDeveloperName>
        <label>Swipe</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CI_Transaction_ID_c__c</fullName>
        <externalDeveloperName>CI_Transaction_ID__c</externalDeveloperName>
        <label>Transaction ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CI_Transaction_Result_c__c</fullName>
        <externalDeveloperName>CI_Transaction_Result__c</externalDeveloperName>
        <label>Transaction Result</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CI_Transaction_Time_c__c</fullName>
        <externalDeveloperName>CI_Transaction_Time__c</externalDeveloperName>
        <label>Transaction Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CI_Transaction_Type_c__c</fullName>
        <externalDeveloperName>CI_Transaction_Type__c</externalDeveloperName>
        <label>Transaction Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Calculated_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Calculated__c</externalDeveloperName>
        <label>Calculated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Individual_c__c</fullName>
        <externalDeveloperName>Case_Individual__c</externalDeveloperName>
        <label>Case Individual</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments_c__c</fullName>
        <externalDeveloperName>Comments__c</externalDeveloperName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ConnectionReceivedId__c</fullName>
        <externalDeveloperName>ConnectionReceivedId</externalDeveloperName>
        <label>Received Connection ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConnectionSentId__c</fullName>
        <externalDeveloperName>ConnectionSentId</externalDeveloperName>
        <label>Sent Connection ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedById__c</fullName>
        <externalDeveloperName>CreatedById</externalDeveloperName>
        <label>Created By ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <externalDeveloperName>CreatedDate</externalDeveloperName>
        <label>Created Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Creation_Source_c__c</fullName>
        <externalDeveloperName>Creation_Source__c</externalDeveloperName>
        <label>Creation Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Parent</fullName>
                </value>
                <value>
                    <fullName>Provider</fullName>
                </value>
                <value>
                    <fullName>System</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Month_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Current_Month__c</externalDeveloperName>
        <label>Current Month</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Denial_Status_c__c</fullName>
        <externalDeveloperName>Denial_Status__c</externalDeveloperName>
        <label>Denial Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CHATS_CASE_STATUS_NOT_EQUAL_TO_OPEN</fullName>
                </value>
                <value>
                    <fullName>AUTHORIZATION_BEGIN_DATE_IN_THE_FUTURE</fullName>
                </value>
                <value>
                    <fullName>AUTHORIZATION_END_DATE_IN_THE_PAST</fullName>
                </value>
                <value>
                    <fullName>AUTHORIZATION_STATUS_NOT_EQUAL_TO_APPROVED</fullName>
                </value>
                <value>
                    <fullName>AUTHORIZATION_FISCAL_AGREEMENT_NOT_VALID</fullName>
                </value>
                <value>
                    <fullName>NO_DROP_IN_DAYS_REMAINING</fullName>
                </value>
                <value>
                    <fullName>AUTHORIZATON_HOURS_INVALID</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Household_Name_c__c</fullName>
        <externalDeveloperName>Household_Name__c</externalDeveloperName>
        <label>Household Name</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>In_Current_Month_c__c</fullName>
        <externalDeveloperName>In_Current_Month__c</externalDeveloperName>
        <label>In Current Month?</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsDeleted</externalDeveloperName>
        <label>Deleted</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastActivityDate__c</fullName>
        <externalDeveloperName>LastActivityDate</externalDeveloperName>
        <label>Last Activity Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LastModifiedById__c</fullName>
        <externalDeveloperName>LastModifiedById</externalDeveloperName>
        <label>Last Modified By ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <externalDeveloperName>LastModifiedDate</externalDeveloperName>
        <label>Last Modified Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastReferencedDate__c</fullName>
        <externalDeveloperName>LastReferencedDate</externalDeveloperName>
        <label>Last Referenced Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastViewedDate__c</fullName>
        <externalDeveloperName>LastViewedDate</externalDeveloperName>
        <label>Last Viewed Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MC_PLU_CHATS_Case_c__c</fullName>
        <externalDeveloperName>MC_PLU_CHATS_Case__c</externalDeveloperName>
        <label>MC_PLU_CHATS_Case</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MC_PLU_Case_Individual_c__c</fullName>
        <externalDeveloperName>MC_PLU_Case_Individual__c</externalDeveloperName>
        <label>MC_PLU_Case_Individual</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MC_PLU_Schedule_c__c</fullName>
        <externalDeveloperName>MC_PLU_Schedule__c</externalDeveloperName>
        <label>MC_PLU_Schedule</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MC_Proxy_ID_c__c</fullName>
        <externalDeveloperName>MC_Proxy_ID__c</externalDeveloperName>
        <label>MC_Proxy_ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MC_Restriction_001_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>MC_Restriction_001__c</externalDeveloperName>
        <label>MC_Restriction__001</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <externalDeveloperName>Name</externalDeveloperName>
        <label>Transaction</label>
        <length>80</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orphan_DropIn_Date_c__c</fullName>
        <externalDeveloperName>Orphan_DropIn_Date__c</externalDeveloperName>
        <label>Orphan DropIn Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Orphan_DropIn_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Orphan_DropIn__c</externalDeveloperName>
        <label>Orphan DropIn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Overnight_Authorization_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Overnight_Authorization__c</externalDeveloperName>
        <label>Overnight Authorization</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Previous_Transaction_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Previous_Transaction__c</externalDeveloperName>
        <label>Previous Transaction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Private_Pay_Contact_c__c</fullName>
        <externalDeveloperName>Private_Pay_Contact__c</externalDeveloperName>
        <label>Private Pay Contact</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Check_Out_Time_Date_Time_c__c</fullName>
        <externalDeveloperName>Provider_Check_Out_Time_Date_Time__c</externalDeveloperName>
        <label>Provider Check-In-Out Date/Time</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Provider_Email_c__c</fullName>
        <externalDeveloperName>Provider_Email__c</externalDeveloperName>
        <label>Provider Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Provider_c__c</fullName>
        <externalDeveloperName>Provider__c</externalDeveloperName>
        <label>Provider</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordTypeId__c</fullName>
        <externalDeveloperName>RecordTypeId</externalDeveloperName>
        <label>Record Type ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reporting_Authorization_Id_c__c</fullName>
        <externalDeveloperName>Reporting_Authorization_Id__c</externalDeveloperName>
        <label>Reporting Authorization Id</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reporting_Card_Number_c__c</fullName>
        <externalDeveloperName>Reporting_Card_Number__c</externalDeveloperName>
        <label>Reporting Card Number</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reporting_Case_Id_c__c</fullName>
        <externalDeveloperName>Reporting_Case_Id__c</externalDeveloperName>
        <label>Reporting Case Id</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reporting_Child_Name_c__c</fullName>
        <externalDeveloperName>Reporting_Child_Name__c</externalDeveloperName>
        <label>Reporting Child Name</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reporting_Child_Number_c__c</fullName>
        <externalDeveloperName>Reporting_Child_Number__c</externalDeveloperName>
        <label>Reporting Child Number</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reporting_Client_Id_c__c</fullName>
        <externalDeveloperName>Reporting_Client_Id__c</externalDeveloperName>
        <label>Reporting Client Id</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reporting_Denial_Reason_Code_c__c</fullName>
        <externalDeveloperName>Reporting_Denial_Reason_Code__c</externalDeveloperName>
        <label>Reporting Denial Reason Code</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reporting_Error_Description_c__c</fullName>
        <externalDeveloperName>Reporting_Error_Description__c</externalDeveloperName>
        <label>Reporting Error Description</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reporting_Parent_Caretaker_Name_c__c</fullName>
        <externalDeveloperName>Reporting_Parent_Caretaker_Name__c</externalDeveloperName>
        <label>Reporting Parent Caretaker Name</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reporting_Provider_Id_c__c</fullName>
        <externalDeveloperName>Reporting_Provider_Id__c</externalDeveloperName>
        <label>Reporting Provider Id</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reporting_SAF_Indicator_c__c</fullName>
        <externalDeveloperName>Reporting_SAF_Indicator__c</externalDeveloperName>
        <label>Reporting SAF Indicator</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reporting_State_Id_c__c</fullName>
        <externalDeveloperName>Reporting_State_Id__c</externalDeveloperName>
        <label>Reporting State Id</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reporting_Transaction_Result_c__c</fullName>
        <externalDeveloperName>Reporting_Transaction_Result__c</externalDeveloperName>
        <label>Reporting Transaction Result</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reporting_Transaction_Type_c__c</fullName>
        <externalDeveloperName>Reporting_Transaction_Type__c</externalDeveloperName>
        <label>Reporting Transaction Type</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Schedule_c__c</fullName>
        <externalDeveloperName>Schedule__c</externalDeveloperName>
        <label>Schedule</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_c__c</fullName>
        <externalDeveloperName>Status__c</externalDeveloperName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>VOID</fullName>
                </value>
                <value>
                    <fullName>PARENT_REJECTED</fullName>
                </value>
                <value>
                    <fullName>PARENT_APPROVED</fullName>
                </value>
                <value>
                    <fullName>PENDING_PROVIDER</fullName>
                </value>
                <value>
                    <fullName>PARENT_PENDING</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Type_c__c</fullName>
        <externalDeveloperName>Sub_Type__c</externalDeveloperName>
        <label>Sub Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DROP_IN</fullName>
                </value>
                <value>
                    <fullName>CCCAP</fullName>
                </value>
                <value>
                    <fullName>CCCAP_NOT_AUTHORIZED</fullName>
                </value>
                <value>
                    <fullName>PRIVATE_PAY</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SystemModstamp__c</fullName>
        <externalDeveloperName>SystemModstamp</externalDeveloperName>
        <label>System Modstamp</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Transaction_CreatedBy_c__c</fullName>
        <externalDeveloperName>Transaction_CreatedBy__c</externalDeveloperName>
        <label>Transaction CreatedBy</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_c__c</fullName>
        <externalDeveloperName>Transaction__c</externalDeveloperName>
        <label>Transaction</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Number_c__c</fullName>
        <externalDeveloperName>Provider_Number__c</externalDeveloperName>
        <label>Provider Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type_Name_c__c</fullName>
        <externalDeveloperName>Record_Type_Name__c</externalDeveloperName>
        <label>Record Type Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Created_By_Name__c</fullName>
        <externalDeveloperName>Transaction_Created_By_Name__c</externalDeveloperName>
        <label>Transaction Created By Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Transaction</label>
    <pluralLabel>Transaction</pluralLabel>
</CustomObject>